Split FeedServer up into helper functions and added (mocked) support for getting and saving web pages for the feed items

--- a/test/mocks/mock_app/views/basic_feed.xml
+++ b/test/mocks/mock_app/views/basic_feed.xml
@@ -8,7 +8,7 @@
 	<pubDate>Mon, 06 Sep 2009 16:45:00 +0000 </pubDate>
  
 	<item>
-		<title>Example entry</title>
+		<title>Item 1 Title</title>
 		<description>Here is some text containing an interesting description of the thing to be described.</description>
 		<link>http://www.wikipedia.org/</link>
 		<guid>unique string per item</guid>
