--- a/src/views/base.jade
+++ b/src/views/base.jade
@@ -13,7 +13,7 @@ html
   body
     #header
       h1 The Headlyne Times
-      span December 22, 2010
+      #subtitle December 23, 2010
     #content!= content
     #footer
-      span Copyright 2010, Chetan Surpur and Manoj Mardithaya
+      #copyright Copyright 2010, Chetan Surpur and Manoj Mardithaya
