--- a/src/public/includes/css/layout.css
+++ b/src/public/includes/css/layout.css
@@ -15,6 +15,10 @@
 }
 #footer { text-align: center; }
 
+#subtitle {
+	font-family: Andale Mono, monospace;
+}
+
 .page {
 	width: 100%;
 	margin-left: auto;
@@ -29,6 +33,10 @@
 
 .column-content {
 	padding: 10px;
+}
+
+.feed-item {
+	margin-bottom: 10px;
 }
 
 
