--- a/src/public/includes/css/layout.css
+++ b/src/public/includes/css/layout.css
@@ -8,9 +8,13 @@
 /* Divs
 -------------------------------------------------------------- */
 
-#header {
+#navbar {
+	padding-left: 5px;
+	border-bottom: 1px dotted;
+}
+#folio {
 	text-align: center;
-	margin-top: 15px;
+	margin-top: 30px;
 	margin-bottom: 15px;
 }
 #footer { text-align: center; }
