--- a/src/views/base.jade
+++ b/src/views/base.jade
@@ -10,10 +10,16 @@ html
     link(href=base_url+"includes/css/uielements.css", rel="stylesheet", type="text/css")
     link(href=base_url+"includes/css/layout.css", rel="stylesheet", type="text/css")
     script(src=base_url+"includes/js/jquery-1.4.2.min.js", type="text/javascript")
+    script(src=base_url+"includes/js/client.js", type="text/javascript")
   body
     #header
-      h1 The Headlyne Times
-      #subtitle December 23, 2010
+    	#navbar
+        a(id="expand_collapse_button", href='#', title='Collapse everything', onclick="collapseOrExpand()") Collapse
+        span \ - 
+        a(id="edit_button", href='#', title='Edit this page', onclick="edit()") Edit
+      #folio
+        h1 The Headlyne Times
+        #subtitle December 23, 2010
     #content!= content
     #footer
       #copyright Copyright 2010, Chetan Surpur and Manoj Mardithaya
