--- a/src/public/includes/css/layout.css
+++ b/src/public/includes/css/layout.css
@@ -8,6 +8,38 @@
 /* Divs
 -------------------------------------------------------------- */
 
+.modal {
+		background-color:#fff;
+		display:none;
+		width:350px;
+		padding:15px;
+		text-align:left;
+		border:2px solid #333;
+		
+		opacity:0.8;
+		-moz-border-radius:6px;
+		-webkit-border-radius:6px;
+		-moz-box-shadow: 0 0 50px #ccc;
+		-webkit-box-shadow: 0 0 50px #ccc;
+	}
+	
+	.modal h2 {
+		margin:0px;
+		padding:10px 0 10px 45px;
+		border-bottom:1px solid #333;
+		font-size:20px;
+	}
+	
+	.modal .close {
+		background-image:url(/includes/img/buttons/close.png);
+		position:absolute;
+		right:-15px;
+		top:-15px;
+		cursor:pointer;
+		height:35px;
+		width:35px;
+	}		
+	
 #navbar {
 	padding-left: 5px;
 	border-bottom: 1px dotted;
