--- a/src/views/base.jade
+++ b/src/views/base.jade
@@ -9,7 +9,8 @@ html
     link(href=base_url+"includes/css/forms.css", rel="stylesheet", type="text/css")
     link(href=base_url+"includes/css/uielements.css", rel="stylesheet", type="text/css")
     link(href=base_url+"includes/css/layout.css", rel="stylesheet", type="text/css")
-    script(src=base_url+"includes/js/jquery-1.4.2.min.js", type="text/javascript")
+    // jQuery Library + UI Tools
+    script(src=base_url+"includes/js/jquery.tools.min.js", type="text/javascript")
     script(src=base_url+"includes/js/client.js", type="text/javascript")
   body
     #header
@@ -18,8 +19,9 @@ html
         span \ - 
         a(id="edit_button", href='#', title='Edit this page', onclick="edit()") Edit
       #folio
-        h1 The Headlyne Times
+        h1.modalInput(rel="#test") The Headlyne Times
         #subtitle December 23, 2010
+	  div#test.modal hello
     #content!= content
     #footer
       #copyright Copyright 2010, Chetan Surpur and Manoj Mardithaya
