--- a/src/public/includes/css/layout.css
+++ b/src/public/includes/css/layout.css
@@ -49,7 +49,10 @@
 	margin-top: 30px;
 	margin-bottom: 15px;
 }
-#footer { text-align: center; }
+#footer {
+	text-align: center;
+	border-top: 1px dotted;
+}
 
 #subtitle {
 	font-family: Andale Mono, monospace;
