--- a/src/views/base.jade
+++ b/src/views/base.jade
@@ -10,14 +10,17 @@ html
     link(href=base_url+"includes/css/uielements.css", rel="stylesheet", type="text/css")
     link(href=base_url+"includes/css/layout.css", rel="stylesheet", type="text/css")
     // jQuery Library + UI Tools
-    script(src=base_url+"includes/js/jquery.tools.min.js", type="text/javascript")
+    script(src="http://cdn.jquerytools.org/1.2.5/full/jquery.tools.min.js", type="text/javascript")
     script(src=base_url+"includes/js/client.js", type="text/javascript")
   body
     #header
     	#navbar
-        a(id="expand_collapse_button", href='#', title='Collapse everything', onclick="collapseOrExpand()") Collapse
+        a(id="expand-collapse-button", href='#', title='Collapse everything', onclick="collapseOrExpand()") Collapse
         span \ - 
-        a(id="edit_button", href='#', title='Edit this page', onclick="edit()") Edit
+        a(id="edit-button", href='#', onclick="edit()") Edit
+        #add-dialog.tooltip
+          input#add-url
+				  button#preview Preview
       #folio
         h1.modalInput(rel="#test") The Headlyne Times
         #subtitle December 23, 2010
