--- a/src/public/includes/css/layout.css
+++ b/src/public/includes/css/layout.css
@@ -10,11 +10,14 @@
 
 .tooltip {
 	display:none;
-	background:transparent;
-	height:163px;
-	width:110px;
+	height:120px;
+	width:240px;
 	font-size:11px;
 	color:#fff;
+}
+
+#add-dialog {
+	text-align: center;
 }
 
 .modal {
