--- a/src/views/base.jade
+++ b/src/views/base.jade
@@ -10,7 +10,8 @@ html
     link(href=base_url+"includes/css/uielements.css", rel="stylesheet", type="text/css")
     link(href=base_url+"includes/css/layout.css", rel="stylesheet", type="text/css")
     // jQuery Library + UI Tools
-    script(src="http://cdn.jquerytools.org/1.2.5/full/jquery.tools.min.js", type="text/javascript")
+    //script(src="http://cdn.jquerytools.org/1.2.5/full/jquery.tools.min.js", type="text/javascript")
+    script(src=base_url+"includes/js/jquery.tools.min.js", type="text/javascript")
     script(src=base_url+"includes/js/client.js", type="text/javascript")
   body
     #header
@@ -19,9 +20,11 @@ html
         span \ - 
         a(id="edit-button", href='#', onclick="edit()") Edit
         #add-dialog.tooltip
-          input#add-url
-          button#preview-button('onclick="preview()") Preview
-	    .feed-preview
+          .add-input
+            input#add-url
+            button#preview-button Preview
+          .preview-error
+          .feed-preview
       #folio
         h1.modalInput(rel="#test") The Headlyne Times
         #subtitle December 23, 2010
