Changed all click handlers to jQuery event handlers

--- a/src/views/base.jade
+++ b/src/views/base.jade
@@ -16,9 +16,9 @@ html
   body
     #header
     	#navbar
-        a(id="expand-collapse-button", href='#', title='Collapse everything', onclick="collapseOrExpand()") Collapse
+        a(id="expand-collapse-button", href='#', title='Collapse everything') Collapse
         span \ - 
-        a(id="edit-button", href='#', onclick="edit()") Edit
+        a(id="edit-button", href='#') Edit
         #add-dialog.tooltip
           .add-input
             input#add-url
