--- a/src/views/base.jade
+++ b/src/views/base.jade
@@ -16,9 +16,21 @@ html
   body
     #header
     	#navbar
-        a(id="expand-collapse-button", href='#', title='Collapse everything') Collapse
+        span#expand-control
+          a(id="expand-button", href='#', title='Collapse everything') Collapse
+        span#collapse-control
+          a(id="collapse-button", href='#', title='Expand everything') Expand
         span \ - 
-        a(id="edit-button", href='#') Edit
+        span#edit-default-control
+          a(id="edit-button", href='#') Edit
+        span#edit-editing-control
+          span [\ 
+          a(id="done-button", href='#') Done
+          span \ - 
+          a(id="add-feed-button", href='#') Add Feed
+          span \ - 
+          a(id="add-column-button", href='#') Add Column
+          span \ ]
       #folio
         h1.modalInput(rel="#test") The Headlyne Times
         #subtitle December 23, 2010
