--- a/src/views/base.jade
+++ b/src/views/base.jade
@@ -2,7 +2,7 @@
 html
   head
     title= title
-    //link(href="http://fonts.googleapis.com/css?family=UnifrakturCook:bold", rel="stylesheet", type="text/css")
+    link(href="http://fonts.googleapis.com/css?family=UnifrakturCook:bold", rel="stylesheet", type="text/css")
     link(href=base_url+"includes/css/reset.css", rel="stylesheet", type="text/css")
     link(href=base_url+"includes/css/typography.css", rel="stylesheet", type="text/css")
     link(href=base_url+"includes/css/colors.css", rel="stylesheet", type="text/css")
@@ -11,6 +11,9 @@ html
     link(href=base_url+"includes/css/layout.css", rel="stylesheet", type="text/css")
     // jQuery Library + UI Tools
     script(src="http://cdn.jquerytools.org/1.2.5/full/jquery.tools.min.js", type="text/javascript")
+    // jQuery UI
+    link(href=base_url+"includes/css/ui-darkness/jquery-ui-1.8.7.custom.css", rel="stylesheet", type="text/css")
+    script(src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.7/jquery-ui.min.js", type="text/javascript")
     script(src=base_url+"includes/js/client.js", type="text/javascript")
   body
     #header
