--- a/src/public/includes/css/layout.css
+++ b/src/public/includes/css/layout.css
@@ -95,50 +95,32 @@
 	position: relative;
 }
 
-.feed-edit-control {
-	background: #ddd;
+.feed-edit-overlay {
+	background: #eee;
 	width: 100%;
 	height: 100%;
+	opacity:0.8;
 	position: absolute;
 	top: 0;
 }
 
-.feed-edit-move-icon {
+.feed-move-icon {
 	position: absolute;
 	top: 50%;
-	height: 26px;
-	margin-top:-13px;
+	height: 20px;
+	margin-top:-10px;
 	left: 5px;
 	font-size: 14px;
 }
 
-.feed-edit-edit-button {
-	float: right;
-	font-size: 12px !important;
-}
-
-.clear {
-	clear: both;
-}
-
-.feed-preview {
-	margin-top: 10px;
-}
-
 .feed-edit-control {
-	background: #ccc;
-	opacity:0.8;
-	width: 100%;
-}
-
-.feed-edit-click-label {
-	float: left;
+	position: absolute;
+	top: 50%;
+	height: 26px;
+	margin-top:-13px;
+	right: 5px;
 	font-size: 14px;
-}
-
-.feed-edit-items-label {
-	float: right;
-	font-size: 14px;
+	font-size: 16px !important;
 }
 
 .clear {
