--- a/src/views/preview.jade
+++ b/src/views/preview.jade
@@ -1,31 +1,29 @@
-.feed-header
-  h3.feed-title= title
-  .feed-url= url
-  span.feed-edit-items-label Items to display:\ 
-    select
-      option 1
-      option 2
-      option 3
-      option 4
-      option 5
-      option 6
-      option 7
-      option 8
-      option 9
-      option 10
-.feed-body
-  - each item in items
-    .feed-item
-      .feed-item-header
-        - if (item.title)
-        h2.feed-item-title= item.title
+.feed-num-items-control
+  span Items to display:\ 
+  select.num-items-input
+    option 1
+    option 2
+    option 3
+    option 4
+    option 5
+    option 6
+    option 7
+    option 8
+    option 9
+    option 10
+.feed-preview-body
+  - var item = items[0]
+  .feed-item
+    .feed-item-header
+      - if (item.title)
+      h2.feed-item-title= item.title
+      - if (item.webpage)
+        - if (item.webpage.title)
+          h2.feed-webpage-title= item.webpage.title
+    .feed-item-body
+      .feed-item-snippet
+        - if (item.description)
+          div.feed-item-description!= item.description
         - if (item.webpage)
-          - if (item.webpage.title)
-            h2.feed-webpage-title= item.webpage.title
-      .feed-item-body
-        .feed-item-snippet
-          - if (item.description)
-            div.feed-item-description!= item.description
-          - if (item.webpage)
-            - if (item.webpage.body)
-              div.feed-webpage-snippet!= item.webpage.body
+          - if (item.webpage.body)
+            div.feed-webpage-snippet!= item.webpage.body
