Using LESS for the layout css file

--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -1,6 +1,6 @@
 /* --------------------------------------------------------------
 
-   layout.css
+   layout.less
    * Sets up site-specific layout styles
 
 -------------------------------------------------------------- */
