--- a/src/views/base.jade
+++ b/src/views/base.jade
@@ -8,7 +8,9 @@ html
     link(href=base_url+"includes/css/colors.css", rel="stylesheet", type="text/css")
     link(href=base_url+"includes/css/forms.css", rel="stylesheet", type="text/css")
     link(href=base_url+"includes/css/uielements.css", rel="stylesheet", type="text/css")
-    link(href=base_url+"includes/css/layout.css", rel="stylesheet", type="text/css")
+    link(href=base_url+"includes/css/layout.less", rel="stylesheet/less", type="text/css")
+    // LESS
+    script(src=base_url+"includes/js/less-1.0.35.min.js", type="text/javascript")
     // jQuery Library + UI Tools
     script(src="http://cdn.jquerytools.org/1.2.5/full/jquery.tools.min.js", type="text/javascript")
     // jQuery UI
