Progress on previews

--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -129,6 +129,29 @@
 
 .feed-preview {
 	margin-top: 10px;
+	
+	.display {
+		.titles, .bodies {
+			.item, .webpage {
+				display: inline-block;
+				width: 300px;
+				vertical-align: top;
+				
+				.control, .title, .body {
+					display: inline-block;
+				}
+				
+				.control {
+					vertical-align: top;
+					width: 30px;
+				}
+				
+				.title, .body {
+					width: 260px;
+				}
+			}
+		}
+	}
 }
 
 .feed-title {
