Fixed misnaming of collapse and expand buttons

--- a/src/views/base.jade
+++ b/src/views/base.jade
@@ -20,10 +20,10 @@ html
   body
     #header
     	#navbar
-        span#expand-control
-          a(id="expand-button", href='#', title='Collapse everything') Collapse
         span#collapse-control
-          a(id="collapse-button", href='#', title='Expand everything') Expand
+          a(id="collapse-button", href='#', title='Collapse everything') Collapse
+        span#expand-control
+          a(id="expand-button", href='#', title='Expand everything') Expand
         span \ - 
         span#edit-default-control
           a(id="edit-button", href='#') Edit
