Progress on feed editing UI

--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -134,7 +134,7 @@
 		.titles, .bodies {
 			.item, .webpage {
 				display: inline-block;
-				width: 300px;
+				width: 50%;
 				vertical-align: top;
 				
 				.control, .title, .body {
@@ -143,11 +143,11 @@
 				
 				.control {
 					vertical-align: top;
-					width: 30px;
+					width: 10%;
 				}
 				
 				.title, .body {
-					width: 260px;
+					width: 90%;
 				}
 			}
 		}
