Started work on cleaning up HTML / CSS class names

--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -69,10 +69,10 @@
 	vertical-align: top;
 	width: 33%;
 	min-height: 50px;
-}
-
-.column-content {
-	padding: 10px;
+	
+	.content {
+		padding: 10px;
+	}
 }
 
 .ui-sortable-placeholder {
