--- a/src/views/page.jade
+++ b/src/views/page.jade
@@ -1,6 +1,6 @@
 .page
   - each column in columns 
     .column
-      .column-content
+      .content
         - each feed in column.feeds
           .feed!= feed
