--- a/src/public/includes/css/colors.css
+++ b/src/public/includes/css/colors.css
@@ -12,7 +12,7 @@
 -------------------------------------------------------------- */
 
 h1,h2,h3,h4,h5,h6	{ color: #111; }
-.title				{ color: #D64203; }
+.title {}
 
 /*		Text elements
 -------------------------------------------------------------- */
