--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -87,96 +87,104 @@
 
 .feed {
 	margin-bottom: 10px;
-}
-
-.feed-header {
-	border: 1px solid;
-	text-align: center;
-	position: relative;
-}
-
-.feed-edit-overlay {
-	background: #eee;
-	width: 100%;
-	height: 100%;
-	opacity:0.8;
-	position: absolute;
-	top: 0;
-}
-
-.feed-move-icon {
-	position: absolute;
-	top: 50%;
-	height: 20px;
-	margin-top:-10px;
-	left: 5px;
-	font-size: 14px;
-}
-
-.feed-edit-control {
-	position: absolute;
-	top: 50%;
-	height: 26px;
-	margin-top:-13px;
-	right: 5px;
-	font-size: 14px;
-	font-size: 16px !important;
-}
-
-.clear {
-	clear: both;
-}
-
-.feed-preview {
-	margin-top: 10px;
 	
-	.display {
-		.titles, .bodies {
-			.item, .webpage {
-				display: inline-block;
-				width: 50%;
-				vertical-align: top;
-				
-				.control, .title, .body {
-					display: inline-block;
+	> .header {
+		border: 1px solid;
+		text-align: center;
+		position: relative;
+		
+		> .title {
+			margin-bottom: 5px;
+		}
+
+		> .url {
+			display: none;
+		}
+		
+		> .edit-overlay {
+			background: #eee;
+			width: 100%;
+			height: 100%;
+			opacity:0.8;
+			position: absolute;
+			top: 0;
+			
+			> .move-icon {
+				position: absolute;
+				top: 50%;
+				height: 20px;
+				margin-top:-10px;
+				left: 5px;
+				font-size: 14px;
+			}
+			
+			> .edit-delete {
+				position: absolute;
+				top: 50%;
+				height: 26px;
+				margin-top:-13px;
+				right: 5px;
+				font-size: 14px;
+				font-size: 16px !important;
+			}
+		}
+	}
+	
+	> .preview {
+		margin-top: 10px;
+		
+		> .display {
+			> .titles, > .bodies {
+				> form {
+					> .item, > .webpage {
+						display: inline-block;
+						width: 50%;
+						vertical-align: top;
+						
+						> .control, > .title, > .body {
+							display: inline-block;
+						}
+						
+						> .control {
+							vertical-align: top;
+							width: 10%;
+						}
+						
+						> .title, > .body {
+							width: 90%;
+						}
+					}
 				}
-				
-				.control {
-					vertical-align: top;
-					width: 10%;
-				}
-				
-				.title, .body {
-					width: 90%;
+			}
+		}
+	}
+	
+	> .body {
+		> .item {
+			margin-bottom: 15px;
+			
+			> .body {
+				> .snippet {
+					pre {
+						white-space: pre-wrap;       /* css-3 */
+						white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
+						white-space: -pre-wrap;      /* Opera 4-6 */
+						white-space: -o-pre-wrap;    /* Opera 7 */
+						word-wrap: break-word;       /* Internet Explorer 5.5+ */
+					}
+					
+					img {
+						max-width:100%;
+						height:auto;
+					}
 				}
 			}
 		}
 	}
 }
 
-.feed-title {
-	margin-bottom: 5px;
-}
-
-.feed-url {
-	display: none;
-}
-
-.feed-item {
-	margin-bottom: 15px;
-}
-
-.feed-item-snippet pre {
-	white-space: pre-wrap;       /* css-3 */
-	white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
-	white-space: -pre-wrap;      /* Opera 4-6 */
-	white-space: -o-pre-wrap;    /* Opera 7 */
-	word-wrap: break-word;       /* Internet Explorer 5.5+ */
-}
-
-.feed-item-snippet img {
-	max-width:100%;
-	height:auto;
+.clear {
+	clear: both;
 }
 
 
