--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -65,7 +65,7 @@
 }
 
 .column {
-	display: inline-block; 
+	display: inline-block !important;
 	vertical-align: top;
 	width: 33%;
 	min-height: 50px;
