Switched to using snippets for webpage bodies

--- a/src/views/feed.jade
+++ b/src/views/feed.jade
@@ -36,5 +36,5 @@
             div.snippet!= item.description
         - if (body_selection == "webpage")
           - if (item.webpage)
-            - if (item.webpage.body)
-              div.snippet!= item.webpage.body
+            - if (item.webpage.snippet)
+              div.snippet!= item.webpage.snippet
