Marking selected settings in feed previews

--- a/src/views/feed.jade
+++ b/src/views/feed.jade
@@ -1,6 +1,9 @@
 .header
   h3.title= title
-  .url= url
+  .settings
+    .url= url
+    .title-selection= title_selection
+    .body-selection= body_selection
   .edit-overlay
     span.move-icon.ui-icon.ui-icon-arrow-4
     span.edit-delete
