Made feed deletion work

--- a/src/views/feed.jade
+++ b/src/views/feed.jade
@@ -21,6 +21,9 @@
           a.done-button(href='#') Done
       span \ ]
     .clear
+.confirm-delete
+  span Confirm feed deletion: 
+  a.delete-button(href="#") Delete
 .preview
 .body
   - each item in items
