Cleaned up some animations

--- a/src/public/includes/css/layout.less
+++ b/src/public/includes/css/layout.less
@@ -69,7 +69,17 @@
 	vertical-align: top;
 	width: 33%;
 	
-	.content {
+	> .header {
+		> .edit-overlay {
+			text-align: center;
+		}
+	}
+	
+	> .confirm-delete {
+		text-align: center;
+	}
+	
+	> .content {
 		padding: 10px;
 		min-height: 50px;
 	}
