--- a/src/views/page.jade
+++ b/src/views/page.jade
@@ -8,9 +8,8 @@
               a.delete-button(href='#') Delete Column
             span.deleting-control
               a.cancel-button(href='#') Cancel
-      .confirm-delete
-        span Confirm column deletion: 
-        a.delete-button(href="#") Delete
+              br
+              a.delete-confirm-button(href="#") Confirm Delete
       .content
         - each feed in column.feeds
           .feed!= feed
