Added options when deleting column

--- a/src/views/page.jade
+++ b/src/views/page.jade
@@ -5,10 +5,14 @@
         .edit-overlay
           span.delete
             span.default-control
-              a.delete-button(href='#') Delete Column
+              a.delete-button(href='#') Remove Column
             span.deleting-control
               span [\ 
-              a.delete-confirm-button(href="#") Confirm Delete
+              a.move-left-button(href="#") Move Feeds Left
+              span \ - 
+              a.move-right-button(href="#") Move Feeds Right
+              span \ - 
+              a.delete-button(href="#") Delete Feeds
               span \ - 
               a.cancel-button(href='#') Cancel
               span \ ] 
